# flutter_viewmodel

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  `create_tasks.py`  `tasks.md`  libraries.txt  pubspec.yaml  pyproject.toml  requirements.txt
`tasks/: child_tasks.json`  task_010_issues.md`
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_viewmodel/: FlutterViewmodelPlugin.kt
android/src/test/kotlin/com/example/flutter_viewmodel/: FlutterViewmodelPluginTest.kt
docs/issues/: documentation-issues.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_viewmodel_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_viewmodel.podspec
ios/Classes/: FlutterViewmodelPlugin.swift
lib/: flutter_viewmodel.dart  flutter_viewmodel_method_channel.dart  flutter_viewmodel_platform_interface.dart  flutter_viewmodel_web.dart
lib/bases/: crud_model_stateful_widget.dart  crud_repository.dart  crud_repository_factory.dart  list_property.dart  model.dart  property.dart  repository_provider.dart  view_model.dart  view_model_state.dart  view_model_widget.dart
lib/src/: version.dart  view_model.dart  view_model_builder.dart  view_model_provider.dart
linux/: CMakeLists.txt  flutter_viewmodel_plugin.cc
linux/include/flutter_viewmodel/: flutter_viewmodel_plugin.h
macos/: flutter_viewmodel.podspec
macos/Classes/: FlutterViewmodelPlugin.swift
task_management/: __init__.py
tasks/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
test/: flutter_viewmodel_method_channel_test.dart  flutter_viewmodel_test.dart  version_test.dart  view_model_test.dart  widget_test.dart
windows/: CMakeLists.txt  flutter_viewmodel_plugin.cpp  flutter_viewmodel_plugin.h  flutter_viewmodel_plugin_c_api.cpp
windows/include/flutter_viewmodel/: flutter_viewmodel_plugin_c_api.h
