[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-management"
version = "0.0.1"
description = "A Django-based task management application."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Task Management Team", email = "maintainers@example.com" }
]
maintainers = [
    { name = "Task Management Team", email = "maintainers@example.com" }
]
keywords = ["django", "task", "management", "todo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "Django>=4.2,<5.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=7.0",
    "pytest-django>=4.5",
]

[project.urls]
Homepage = "https://github.com/your-org/task-management"
Repository = "https://github.com/your-org/task-management"
Changelog = "https://github.com/your-org/task-management/blob/main/CHANGELOG.md"
Issues = "https://github.com/your-org/task-management/issues"

[tool.setuptools.packages.find]
include = ["task_management*"]

[tool.setuptools.package-data]
task_management = ["py.typed"]
