[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-management"
version = "0.0.1"
description = "A Django-based task management application, packaged for distribution on PyPI."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "task-management contributors" },
]
keywords = ["django", "task", "management", "task-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.2,<5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/task-management"
Repository = "https://github.com/your-org/task-management"
Changelog = "https://github.com/your-org/task-management/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
    "pytest-django",
]

[tool.setuptools]
packages = ["task_management"]

[tool.setuptools.package-data]
task_management = ["py.typed"]
